--- a/src/data/grammar/vocab/misc-people.yaml
+++ b/src/data/grammar/vocab/misc-people.yaml
@@ -154,3 +154,17 @@ genericNickname:
 - Pac-Man
 - Precious
 - Squiggy
+
+someGuyOrGal: 
+- guy
+- gal
+- fella
+- dame
+- dude
+- jerk
+- joker
+- nerd
+- twit
+- clown
+- loser
+- fool
