small fixes and tweaks

--- a/src/data/grammar/images/assets/mtg-portraits.yaml
+++ b/src/data/grammar/images/assets/mtg-portraits.yaml
@@ -6,5 +6,5 @@ mtgPortraitsPros:
 - "[_portraitName:Gary Wise][_portrait:#_proDir#/gary-wise-1.jpg]"
 - "[_portraitName:Jarvis Yu][_portrait:#_proDir#/jarvis-yu-4.jpg]"
 - "[_portraitName:LSV,Luis Scott-Vargas][_portrait:#_proDir#/lsv-2.jpg]"
-- "[_portraitName:Richard Garfield,Richard Garfield#comma# Ph.D.][_portrait:#_proDir#/richard-garfield-1.jpg]"
+- "[_portraitName:Richard Garfield][_portrait:#_proDir#/richard-garfield-1.jpg]"
 - "[_portraitName:Sam Pardee,Smdster][_portrait:#_proDir#/sam-pardee-1.jpg]"
