--- a/src/data/grammar/images/svg-streamer-showdown.yaml
+++ b/src/data/grammar/images/svg-streamer-showdown.yaml
@@ -79,6 +79,7 @@ cardFinderChooseEightStreamers: |
   [#cardFinderChooseEightCreatures#][#cardFinderChooseEightPortraits#]
 
 cardFinderChooseEightPortraits: |
+  [#choosePortrait#]
   [#choosePortrait#][_portraitUrl1:#_portrait#][_portraitName1:#_portraitName#]
   [#choosePortrait#][_portraitUrl2:#_portrait#][_portraitName2:#_portraitName#]
   [#choosePortrait#][_portraitUrl3:#_portrait#][_portraitName3:#_portraitName#]
@@ -117,12 +118,15 @@ _portraitDisplayNameVariant:
 - "#_portraitName#"
 - "#_portraitName#"
 - "#_portraitName#"
+- "#_portraitName#"
+- "#_portraitName#"
+- "#_portraitName#"
 - "[_modifier:Biazarro,Evil]#_modifier# #_portraitName#"
 - "[_desc:#adjPersonCharacteristic#,#adj#,#mood#,#genericNickname#]“#_desc#” #_portraitName#"
 - "#_portraitName# a.k.a. “#genericNickname#”"
 - "[_variation:#firstName#,#firstName#,#genericNickname#,“#genericNickname#”]#_variation#"
 - "[_dr:,,Dr. ][_doctorate:, MD, Ph.D.,][_honorific:#_portraitName##comma# Sr.,#_portraitName##comma# Jr.,#_portraitName##comma# Esq.,The Honorable Judge #_portraitName#,#_dr##_portraitName##_doctorate#]#_honorific#"
-- "[_very:,,very ][_adj:#adjPersonCharacteristic#,#adj#,#mood#][_desc:#characterClass#,#playerCategory#,#someGuyOrGal#,#_adj# #someGuyOrGal#][_variant:Some #_desc#,A #_very##_adj# #_desc#,A #_desc# named #_portraitName#]#_variant#"
+- "[_very:,,very ][_adj:#adjPersonCharacteristic#,#adj#,#mood#][_desc:#characterClass#,#playerCategory#,#someGuyOrGal#,#_adj# #someGuyOrGal#][_variant:Some #_desc#,This #_desc#,#_very.a##_adj# #_desc#,#_desc.a# named #_portraitName#]#_variant#"
 
 svgStreamerNameStyle: >
   color: white;
@@ -198,7 +202,7 @@ svgShowdownStreamerProPortrait: |
    [_imgWidth:175][_imgHeight:135][_imgMask:#_noMask#][_portraitUrl:#_portraitUrl#]#svgShowdownStreamerPortrait#
 
 svgShowdownStreamerPortrait1: 
-- "[_imgX:425][_imgY:75][_streamerDisplayName1:#_cardDisplayName1#][_cardName:#_card1#][_imgMask:cardArtMask1][_streamerDisplayName1:#_cardDisplayName1#]#svgShowdownStreamerCardArtPortrait#"
+- "[_imgX:425][_imgY:75][_streamerDisplayName1:#_cardDisplayName1#][_cardName:#_card1#][_imgMask:cardArtMask1]#svgShowdownStreamerCardArtPortrait#"
 - "[_imgX:450][_imgY:115][_streamerDisplayName1:#_portraitName1#][_portraitUrl:#_portraitUrl1#]#svgShowdownStreamerProPortrait#"
 
 svgShowdownStreamerPortrait2: 
