--- a/src/data/grammar/images/assets/mtg-portraits.yaml
+++ b/src/data/grammar/images/assets/mtg-portraits.yaml
@@ -9,12 +9,37 @@ mtgPortraitsPros:
 - "[_portraitName:Brian Bran-Duin][_portrait:#_proDir#/brian-bran-duin-1.jpg,#_proDir#/brian-bran-duin-2.jpg]"
 - "[_portraitName:Brian David-Marshall][_portrait:#_proDir#/brian-david-marshall-1.jpg]"
 - "[_portraitName:Brian Kibler[_portrait:#_proDir#/brian-kibler-1.jpg,#_proDir#/brian-kibler-2.jpg]"
-- "[_portraitName:Caleb Durward,CalebDMTG][_portrait:#_proDir#/caleb-durward-1.jpg]"
+- "[_portraitName:Caleb Durward][_portrait:#_proDir#/caleb-durward-1.jpg]"
 - "[_portraitName:Craig Wescoe][_portrait:#_proDir#/craig-wescoe-1.jpg,#_proDir#/craig-wescoe-2.jpg]"
 - "[_portraitName:David Ochoa,Wrapter][_portrait:#_proDir#/david-ochoa-1.jpg,#_proDir#/david-ochoa-2.jpg,#_proDir#/david-ochoa-3.jpg,#_proDir#/david-ochoa-4.jpg]"
 - "[_portraitName:Elaine Chase][_portrait:#_proDir#/elaine-chase-1.jpg,#_proDir#/elaine-chase-2.jpg]"
 - "[_portraitName:Gary Wise][_portrait:#_proDir#/gary-wise-1.jpg]"
-- "[_portraitName:Jarvis Yu][_portrait:#_proDir#/jarvis-yu-4.jpg]"
-- "[_portraitName:LSV,Luis Scott-Vargas][_portrait:#_proDir#/lsv-2.jpg]"
+- "[_portraitName:Gabriel Nassif][_portrait:#_proDir#/gabriel-nassif-1.jpg]"
+- "[_portraitName:Guillaume Wafo-Tapa][_portrait:#_proDir#/guillaume-wafo-tapa-1.jpg]"
+- "[_portraitName:Helene Bergeot][_portrait:#_proDir#/helene-bergeot-1.jpg]"
+- "[_portraitName:Jarvis Yu][_portrait:#_proDir#/jarvis-yu-1.jpg,#_proDir#/jarvis-yu-2.jpg,#_proDir#/jarvis-yu-3.jpg]"
+- "[_portraitName:Kai Budde][_portrait:#_proDir#/kai-budde-1.jpg,#_proDir#/kai-budde-2.jpg,#_proDir#/kai-budde-3.jpg]"
+- "[_portraitName:LSV,Luis Scott-Vargas][_portrait:#_proDir#/lsv-1.jpg,#_proDir#/lsv-2.jpg,#_proDir#/lsv-3.jpg,#_proDir#/lsv-4.jpg]"
+- "[_portraitName:Mark Rosewater,MaRo][_portrait:#_proDir#/mark-rosewater-1.jpg,#_proDir#/mark-rosewater-2.jpg]"
+- "[_portraitName:Martin Jůza][_portrait:#_proDir#/martin-juza-1.jpg]"
+- "[_portraitName:Matt Nass][_portrait:#_proDir#/matt-nass-1.jpg,#_proDir#/matt-nass-2.jpg]"
+- "[_portraitName:Michael Jacob][_portrait:#_proDir#/michael-jacob-1.jpg]"
+- "[_portraitName:Pascal Maynard][_portrait:#_proDir#/pascal-maynard-1.jpg]"
+- "[_portraitName:Patrick Chapin,Pat Chapin][_portrait:#_proDir#/patrick-chapin-1.jpg]"
+- "[_portraitName:Paul Cheon,HAUMPH][_portrait:#_proDir#/paul-cheon-1.jpg,#_proDir#/paul-cheon-2.jpg]"
+- "[_portraitName:Paul Rietzl][_portrait:#_proDir#/paul-rietzl-1.jpg]"
+- "[_portraitName:Reid Duke][_portrait:#_proDir#/reid-duke-1.jpg]"
+- "[_portraitName:Rich Hagon][_portrait:#_proDir#/rich-hagon-1.jpg]"
 - "[_portraitName:Richard Garfield][_portrait:#_proDir#/richard-garfield-1.jpg]"
-- "[_portraitName:Sam Pardee,Smdster][_portrait:#_proDir#/sam-pardee-1.jpg]"
+- "[_portraitName:Sam Black][_portrait:#_proDir#/sam-black-1.jpg]"
+- "[_portraitName:Sam Pardee][_portrait:#_proDir#/sam-pardee-1.jpg]"
+- "[_portraitName:Shahar Shenhar][_portrait:#_proDir#/shahar-shenhar-1.jpg]"
+- "[_portraitName:Skaff Elias][_portrait:#_proDir#/skaff-elias-1.jpg]"
+- "[_portraitName:Ted Knutson][_portrait:#_proDir#/ted-knutson-1.jpg]"
+- "[_portraitName:Tomoharu Saito][_portrait:#_proDir#/tomoharu-saito-1.jpg]"
+- "[_portraitName:Trey Van Cleave][_portrait:#_proDir#/trey-van-cleave-1.jpg]"
+- "[_portraitName:Trick Jarrett][_portrait:#_proDir#/trick-jarrett-1.jpg]"
+- "[_portraitName:William Jensen][_portrait:#_proDir#/william-jensen-1.jpg]"
+- "[_portraitName:Yuuya Watanabe][_portrait:#_proDir#/yuuya-watanabe-1.jpg]"
+# - "[_portraitName:][_portrait:#_proDir#/]"
+
