--- a/src/data/grammar/mtg/community/mtg-pros.yaml
+++ b/src/data/grammar/mtg/community/mtg-pros.yaml
@@ -16,7 +16,7 @@
       "Watanabe[_proNickname:Watanabe][_proFullName:Yuuya Watanabe][#malePronouns#]",
       "Randy Buehler[_proNickname:Buehler][_proFullName:Randy Buehler][#malePronouns#]",
       "Ruel[_proNickname:Ruel][_proFullName:Olivier Ruel, Antoine Ruel][#malePronouns#]",
-      "Saitou[_proNickname:Saitou][_proFullName:Tomoharu Saitou][#malePronouns#]",
+      "Saitō[_proNickname:Saitō][_proFullName:Tomoharu Saitō][#malePronouns#]",
       "Reid Duke[_proNickname:Reid][_proFullName:Reid Duke][#malePronouns#]",
       "William Jensen[_proNickname:Baby Huey][_proFullName:William Jensen][#malePronouns#]",
       "Frank Karsten[_proNickname:Karsten][_proFullName:Frank Karsten][#malePronouns#]",
@@ -28,7 +28,7 @@
       "Rich Hagon[_proNickname:Rich Hagon][_proFullName:Rich Hagon][#malePronouns#]",
       "EFro[_proNickname:EFro][_proFullName:Eric Froehlich][#malePronouns#]",
       "Masashi Oiso[_proNickname:Masashi Oiso][_proFullName:Masashi Oiso][#malePronouns#]",
-      "Rob Doughrety[_proNickname:Rob Doughrety][_proFullName:Rob Doughrety][#malePronouns#]",
+      "Rob Dougherty[_proNickname:Rob Dougherty][_proFullName:Rob Dougherty][#malePronouns#]",
       "Darwin Kastle[_proNickname:Darwin Kastle][_proFullName:Darwin Kastle][#malePronouns#]",
       "Conley Woods[_proNickname:Conley][_proFullName:Conley Woods][#malePronouns#]",
       "Sam Black[_proNickname:Sam Black][_proFullName:Sam Black][#malePronouns#]",
@@ -57,6 +57,7 @@
       "Jacob Wilson[_proNickname:Jacob Wilson][_proFullName:Jacob Wilson][#malePronouns#]",
       "Steve Rubin[_proNickname:Steve Rubin][_proFullName:Steve Rubin][#malePronouns#]",
       "Matt Nass[_proNickname:Matt Nass][_proFullName:Matt Nass][#malePronouns#]",
+      "Bob Maher[_proNickname:Bob Maher,The Great One][_proFullName:Bob Maher#comma#, Jr.]",
       "Urza[_proNickname:Urza][_proFullName:Urza][#malePronouns#]",
       "RoboRosewater[_proNickname:RoboRosewater][_proFullName:RoboRosewater][#neutralPronouns#]",
       "GLEEMAX[_proNickname:GLEEMAX][_proFullName:GLEEMAX][#neutralPronouns#]"
